# C-Skeleton

./: .clang-format  CMakeLists.txt
src/: hello_world.c  hello_world.h  main.c
